--- a/main.html
+++ b/main.html
@@ -34,9 +34,14 @@
     <div class="item item25">25</div>
   </div>
 
-<script>
-//Your code goes here 
-</script>
+<script src ="script.js">
+
+	//Your code goes here 
+</script>>
+
+	  
+
+
 
   </body>
 </html>
